--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="./fonts/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./fonts/style.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./pages/home/style.css" />
 
     <title>Compasso | Desafio Front-end</title>
-
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
-        <a href="/">
-            <img src="./assets/logo_compasso_1.png" alt="Compasso UOL">
-        </a>
-        <div class="header__time">
-            <span text="header__time clock">11:26</span>
-            <p>terça-feira, 17 de março de 2020</p>
+      <a href="/">
+        <img src="./assets/logo_compasso_1.png" alt="Compasso UOL" />
+      </a>
+      <div class="header__time">
+        <span text="header__time clock">11:26</span>
+        <p>terça-feira, 17 de março de 2020</p>
+      </div>
+      <div class="header__temperature">
+        <span class="text--locale">Passo Fundo - RS</span>
+        <div>
+          <img src="./assets/cloudy.png" alt="Nublado" />
+          <span class="text--degree">22&deg</span>
         </div>
-        <div class="header__temperature">
-            <span class="text--locale">Passo Fundo - RS</span>
-            <div>
-                <img src="./assets/cloudy.png" alt="Nublado">
-                <span class="text--degree">22&deg</span>
-            </div>
-        </div>
+      </div>
     </header>
-</body>
+  </body>
 </html>
