refactor: redo header; add scalable font

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <img src="./assets/logo_compasso_1.png" alt="Compasso UOL" />
       </a>
       <div class="header__time">
-        <span text="header__time clock">11:26</span>
-        <p>terça-feira, 17 de março de 2020</p>
+        <span class="clock">11:26</span>
+        <p class="text--date">terça-feira, 17 de março de 2020</p>
       </div>
-      <div class="header__temperature">
+      <div class="header__weather">
         <span class="text--locale">Passo Fundo - RS</span>
         <div>
           <img src="./assets/cloudy.png" alt="Nublado" />
-          <span class="text--degree">22&deg</span>
+          <span class="degree">22&deg</span>
         </div>
       </div>
     </header>
