refactor: main content

--- a/index.html
+++ b/index.html
@@ -22,9 +22,24 @@
         <span class="text--locale">Passo Fundo - RS</span>
         <div>
           <img src="./assets/cloudy.png" alt="Nublado" />
-          <span class="degree">22&deg</span>
+          <span class="degree">22&deg;</span>
         </div>
       </div>
     </header>
+    <main class="main">
+      <div>
+        <img src="./assets/bola_logo_compasso_1.png" alt="Compasso UOL" />
+      </div>
+      <p class="mission-statement">
+        <span>Our mission is</span>
+        Nossa missão é
+        <span>to transform the world</span>
+        transformar o mundo
+        <span>building digital experiences</span>
+        construindo experiências digitais
+        <span>that enable our client's growth</span>
+        que permitam o crescimento dos nossos clientes
+      </p>
+    </main>
   </body>
 </html>
