--- a/index.html
+++ b/index.html
@@ -41,5 +41,22 @@
         que permitam o crescimento dos nossos clientes
       </p>
     </main>
+    <footer class="footer">
+      <div class="disclaimer">
+        <p>
+          Essa janela do navegador é usada para manter sua sessão de
+          autenticação ativa. Deixe-a aberta em segundo plano e abra uma nova
+          janela para continuar a navegar.
+        </p>
+      </div>
+      <div class="refresh-countdown">
+        <span>Application refresh in</span>
+        <span><strong class="seconds">600</strong>seconds</span>
+      </div>
+      <div class="buttons">
+        <button>Continuar Navegando</button>
+        <button>Logout</button>
+      </div>
+    </footer>
   </body>
 </html>
