refactor: login page

--- a/index.html
+++ b/index.html
@@ -5,58 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./fonts/style.css" />
     <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./pages/home/style.css" />
+    <link rel="stylesheet" href="index.css" />
 
-    <title>Compasso | Desafio Front-end</title>
+    <title>UOL Compasso | Desafio Front-end</title>
   </head>
   <body>
-    <header class="header">
-      <a href="/">
-        <img src="./assets/logo_compasso_1.png" alt="Compasso UOL" />
-      </a>
-      <div class="header__time">
-        <span class="clock">11:26</span>
-        <p class="text--date">terça-feira, 17 de março de 2020</p>
-      </div>
-      <div class="header__weather">
-        <span class="text--locale">Passo Fundo - RS</span>
-        <div>
-          <img src="./assets/cloudy.png" alt="Nublado" />
-          <span class="degree">22&deg;</span>
+    <div class="outer-container">
+      <div class="content">
+        <div class="container">
+          <div class="logo-wrapper">
+            <img
+              class="logo-img"
+              src="./assets/logo_compasso_white_1.png"
+              alt="Compasso UOL"
+            />
+          </div>
+          <p>
+            Olá,<br />
+            <span>
+              Para continuar navegando de forma segura, efetue o login na rede.
+            </span>
+          </p>
+          <form name="signInForm" class="form">
+            <fieldset>
+              <legend>Login</legend>
+              <div class="user">
+                <input
+                  type="email"
+                  name="email"
+                  placeholder="Usuário"
+                  required
+                />
+                <img src="./assets/person-outline.svg" alt="Usuário" />
+              </div>
+              <div class="password">
+                <input
+                  type="password"
+                  name="password"
+                  placeholder="Senha"
+                  required
+                />
+                <img src="./assets/lock-outline.svg" alt="Senha" />
+              </div>
+              <button type="submit">Continuar</button>
+            </fieldset>
+          </form>
         </div>
       </div>
-    </header>
-    <main class="main">
-      <div>
-        <img src="./assets/bola_logo_compasso_1.png" alt="Compasso UOL" />
-      </div>
-      <p class="mission-statement">
-        <span>Our mission is</span>
-        Nossa missão é
-        <span>to transform the world</span>
-        transformar o mundo
-        <span>building digital experiences</span>
-        construindo experiências digitais
-        <span>that enable our client's growth</span>
-        que permitam o crescimento dos nossos clientes
-      </p>
-    </main>
-    <footer class="footer">
-      <div class="disclaimer">
-        <p>
-          Essa janela do navegador é usada para manter sua sessão de
-          autenticação ativa. Deixe-a aberta em segundo plano e abra uma nova
-          janela para continuar a navegar.
-        </p>
-      </div>
-      <div class="refresh-countdown">
-        <span>Application refresh in</span>
-        <span><strong class="seconds">600</strong>seconds</span>
-      </div>
-      <div class="buttons">
-        <button>Continuar Navegando</button>
-        <button>Logout</button>
-      </div>
-    </footer>
+      <div class="background"></div>
+    </div>
   </body>
 </html>
