--- a/home/index.html
+++ b/home/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./fonts/style.css" />
-    <link rel="stylesheet" href="./styles/global.css" />
-    <link rel="stylesheet" href="./pages/home/style.css" />
+    <link rel="stylesheet" href="../fonts/style.css" />
+    <link rel="stylesheet" href="../styles/global.css" />
+    <link rel="stylesheet" href="./style.css" />
 
     <title>UOL Compasso | Desafio Front-end</title>
   </head>
   <body>
     <header class="header">
-      <a href="/">
-        <img src="./assets/logo_compasso_1.png" alt="Compasso UOL" />
-      </a>
+      <div>
+        <img src="../assets/logo_compasso_1.png" alt="Compasso UOL" />
+      </div>
       <div class="header__time">
         <span class="clock">11:26</span>
         <p class="text--date">terça-feira, 17 de março de 2020</p>
@@ -21,14 +21,14 @@
       <div class="header__weather">
         <span class="text--locale">Passo Fundo - RS</span>
         <div>
-          <img src="./assets/cloudy.png" alt="Nublado" />
+          <img src="../assets/cloudy.png" alt="Nublado" />
           <span class="degree">22&deg;</span>
         </div>
       </div>
     </header>
     <main class="main">
       <div>
-        <img src="./assets/bola_logo_compasso_1.png" alt="Compasso UOL" />
+        <img src="../assets/bola_logo_compasso_1.png" alt="Compasso UOL" />
       </div>
       <p class="mission-statement">
         <span>Our mission is</span>
@@ -58,5 +58,7 @@
         <button>Logout</button>
       </div>
     </footer>
+
+    <script src="./index.js"></script>
   </body>
 </html>
