--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -54,5 +54,6 @@
       </div>
       <div class="background"></div>
     </div>
+    <script src="./index.js"></script>
   </body>
 </html>
