refactor: change weather icon to svg

--- a/home/index.html
+++ b/home/index.html
@@ -21,7 +21,7 @@
       <div class="header__weather">
         <span class="text--locale">Passo Fundo - RS</span>
         <div>
-          <img src="../assets/cloudy.png" alt="Nublado" />
+          <img src="../assets/cloudy.svg" alt="Nublado" />
           <span class="degree">22&deg;</span>
         </div>
       </div>
