refactor: implement IndexedDB based sign in and sing out

--- a/home/index.html
+++ b/home/index.html
@@ -59,6 +59,8 @@
       </div>
     </footer>
 
+    <script src="../utils/index.js"></script>
+    <script src="../indexedDB/index.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
